Fixed an issue where the about me section couldnt align properly.
Now I am facing another issue with my gallery

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -4,10 +4,12 @@
   color: #ffffff;
 }
 
+
 .about-box h4 {
   color: #f65282;
   margin-bottom: 30px;
   font-size: 25px;
+ 
 }
 
 .about-box h1 {
@@ -23,7 +25,7 @@
 }
 
 .about-picture {
-  margin-left: 100px;
+ 
 }
 
 .social-box {
@@ -61,5 +63,4 @@
 .display-images {
   margin-top: 20px;
   margin: 40px;
-  aspect-ratio: auto;
 }
