--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,6 @@ h4 {
 /* Make images easier to work with */
 img,
 picture {
-  max-width: 100%;
   height: auto;
   display: block;
 }
@@ -165,18 +164,51 @@ body {
     width: 200px;
     font-size: 13px;
   }
+  .about-picture {
+    width: 500px;
+  }
+  .about-box h4 {
+    color: #f65282;
+    margin-bottom: 20px;
+    font-size: 15px;
+  }
+
+  .about-box h1 {
+    font-size: 35px;
+  }
+  .about-box p {
+    font-size: 16px;
+    margin-top: 25px;
+  }
+  .display-images {
+    margin-top: 20px;
+    margin: 20px;
+    
+  }
 }
 
 @media (max-width: 1024px) {
   .container-box {
     max-width: 768px;
   }
+
   .hero-text h1 {
     font-size: 60px;
   }
   .hero-text h2 {
     font-size: 40px;
   }
+  .about-box,
+  .social-box,
+  .camera-header,
+  .camera-box,
+  .default-btn {
+    margin-left: 40px;
+  }
+  .social-icon {
+    margin-bottom: 40px;
+  }
+
   .about-box h4 {
     font-size: 20px;
     margin-bottom: 13px;
@@ -185,22 +217,32 @@ body {
     font-size: 32px;
   }
   .about-box p {
-    font-size: 18px;
+    font-size: 14px;
+    text-wrap: nowrap;
     margin-top: 25px;
   }
   .camera-header {
-    font-size: 18px;
+    font-size: 16px;
   }
   .camera-box {
     padding: 15px;
     margin-top: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 7px;
     display: inline-flex;
   }
   span {
-    font-size: 14px;
+    font-size: 12px;
   }
-
+  .about-picture {
+    width: 400px;
+  }
+  .default-btn {
+    margin-top: 20px;
+    border-radius: 50px;
+    padding: 13px 13px;
+    width: 180px;
+    font-size: 11px;
+  }
 }
 @media (max-width: 768px) {
   .container-box {
@@ -214,6 +256,17 @@ body {
   }
   .hero-btn {
     margin-top: 40px;
+  }
+  .about {
+    padding: 45px 0 80px 0;
+  }
+  .about-box h4 {
+    margin-top: 30px;
+    font-size: 25px;
+  }
+  .about-box p {
+    font-size: 16px;
+    margin-top: 35px;
   }
 }
 
